updated mostly MGAMPSO and AMPSO.